--- a/People-height-and-weight/people_model.ipynb
+++ b/People-height-and-weight/people_model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOIMB00H0crPFTzLhnrcFrB",
+      "authorship_tag": "ABX9TyODyuCgAyNNQOUiTnFA4JGE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ebrarkiziloglu/My-Basic-ML-Models/blob/main/people_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ebrarkiziloglu/My-Basic-ML-Models/blob/main/People-height-and-weight/people_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -45,9 +45,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sf-yY_7yimVO",
-        "outputId": "8473079a-8290-4a3d-b914-2339cc413a17"
+        "outputId": "14c7fba3-84de-4e9a-e4a8-3b49fac08e1b"
       },
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -57,7 +57,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 1
         }
       ]
     },
@@ -75,9 +75,9 @@
           "height": 300
         },
         "id": "_52Om7gPi2bi",
-        "outputId": "10fab155-8c6c-4d95-f831-bff30e42c54e"
+        "outputId": "0495a60f-5731-4165-d5e8-b38a8b64d382"
       },
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -95,7 +95,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-157137a2-72b1-4987-b9e3-d7636d1bd0c4\">\n",
+              "  <div id=\"df-16f744d5-aafe-4118-a2a3-f8226041de88\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -163,7 +163,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-157137a2-72b1-4987-b9e3-d7636d1bd0c4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-16f744d5-aafe-4118-a2a3-f8226041de88')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -214,12 +214,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-157137a2-72b1-4987-b9e3-d7636d1bd0c4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-16f744d5-aafe-4118-a2a3-f8226041de88 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-157137a2-72b1-4987-b9e3-d7636d1bd0c4');\n",
+              "          const element = document.querySelector('#df-16f744d5-aafe-4118-a2a3-f8226041de88');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -242,7 +242,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 2
         }
       ]
     },
@@ -257,9 +257,9 @@
           "height": 206
         },
         "id": "Kb6U_MBUlT70",
-        "outputId": "bc85d1fc-e0af-426d-84cd-e59172860dc3"
+        "outputId": "ebf0cd15-3028-4c54-b324-7a575f38e10d"
       },
-      "execution_count": 19,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +274,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4b0af37b-5f04-4463-8d08-2748ec792e58\">\n",
+              "  <div id=\"df-d360bdee-48df-42bb-95cd-6e9f65ef0ae8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -345,7 +345,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4b0af37b-5f04-4463-8d08-2748ec792e58')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d360bdee-48df-42bb-95cd-6e9f65ef0ae8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -396,12 +396,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4b0af37b-5f04-4463-8d08-2748ec792e58 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d360bdee-48df-42bb-95cd-6e9f65ef0ae8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4b0af37b-5f04-4463-8d08-2748ec792e58');\n",
+              "          const element = document.querySelector('#df-d360bdee-48df-42bb-95cd-6e9f65ef0ae8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -424,7 +424,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 3
         }
       ]
     },
@@ -442,16 +442,22 @@
         "print(\"Making predictions for the following 5 people:\")\n",
         "print(X.head())\n",
         "print(\"The predictions are\")\n",
-        "print(random_model.predict(X.head()))"
+        "print(random_model.predict(X.head()))\n",
+        "\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "\n",
+        "predicted_weight = random_model.predict(X)\n",
+        "# The following mean error will be very very small since the model and the validation data is the same:\n",
+        "mean_absolute_error(y, predicted_weight)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5yOrQPM2k-TR",
-        "outputId": "55417351-4bf4-431e-eaf8-52df86f7c723"
+        "outputId": "a1e5983d-c750-4259-9c4f-d26953efdfb6"
       },
-      "execution_count": 17,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,20 +473,59 @@
             "The predictions are\n",
             "[158.  74. 131. 212. 161.]\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9403333333333334"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import mean_absolute_error\n",
-        "\n"
+        "# Now, let's break up the data into two pieces, using the function train_test_split of scikit-learn library: \n",
+        "# We'll use some of that data as training data to fit the model\n",
+        "# Then, we'll use the other data as validation data to calculate mean_absolute_error:\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state = 0)\n",
+        "\n",
+        "# Define the model:\n",
+        "better_model = DecisionTreeRegressor()\n",
+        "\n",
+        "# Fit the model:\n",
+        "better_model.fit(train_X, train_y)\n",
+        "\n",
+        "# get predicted prices on validation data:\n",
+        "val_predictions = better_model.predict(val_X)\n",
+        "\n",
+        "# The following mean error will be bigger than the previous case, since the model and the validation data are different:\n",
+        "print(mean_absolute_error(val_y, val_predictions))"
       ],
       "metadata": {
-        "id": "_9DyJwZrldW0"
+        "id": "_9DyJwZrldW0",
+        "outputId": "8fd01d0a-5d37-4604-c724-fe2972d5bc21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "27.912\n"
+          ]
+        }
+      ]
     }
   ]
 }
