--- a/People-height-and-weight/people_random_model.ipynb
+++ b/People-height-and-weight/people_random_model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyODyuCgAyNNQOUiTnFA4JGE",
+      "authorship_tag": "ABX9TyP3LDm78928Iu7646OrMfE3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ebrarkiziloglu/My-Basic-ML-Models/blob/main/People-height-and-weight/people_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ebrarkiziloglu/My-Basic-ML-Models/blob/main/People-height-and-weight/people_random_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -45,7 +45,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sf-yY_7yimVO",
-        "outputId": "14c7fba3-84de-4e9a-e4a8-3b49fac08e1b"
+        "outputId": "ab426027-8938-4d12-9766-4f0b8d9a45fd"
       },
       "execution_count": 1,
       "outputs": [
@@ -65,8 +65,8 @@
       "cell_type": "code",
       "source": [
         "y = random_data.weight\n",
-        "random_features = ['age', 'height']\n",
-        "X = random_data[random_features]\n",
+        "features = ['age', 'height']\n",
+        "X = random_data[features]\n",
         "X.describe()"
       ],
       "metadata": {
@@ -75,9 +75,9 @@
           "height": 300
         },
         "id": "_52Om7gPi2bi",
-        "outputId": "0495a60f-5731-4165-d5e8-b38a8b64d382"
+        "outputId": "334f6cbf-b7b7-4d1b-b5a8-05381f213dc0"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -95,7 +95,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-16f744d5-aafe-4118-a2a3-f8226041de88\">\n",
+              "  <div id=\"df-da327bd5-2af0-4abc-9f3f-0f8f927aed13\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -163,7 +163,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-16f744d5-aafe-4118-a2a3-f8226041de88')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-da327bd5-2af0-4abc-9f3f-0f8f927aed13')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -214,12 +214,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-16f744d5-aafe-4118-a2a3-f8226041de88 button.colab-df-convert');\n",
+              "          document.querySelector('#df-da327bd5-2af0-4abc-9f3f-0f8f927aed13 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-16f744d5-aafe-4118-a2a3-f8226041de88');\n",
+              "          const element = document.querySelector('#df-da327bd5-2af0-4abc-9f3f-0f8f927aed13');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -242,7 +242,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 7
         }
       ]
     },
@@ -257,7 +257,7 @@
           "height": 206
         },
         "id": "Kb6U_MBUlT70",
-        "outputId": "ebf0cd15-3028-4c54-b324-7a575f38e10d"
+        "outputId": "60dab135-9808-45e9-b55f-2e8f3fe1cbf4"
       },
       "execution_count": 3,
       "outputs": [
@@ -274,7 +274,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d360bdee-48df-42bb-95cd-6e9f65ef0ae8\">\n",
+              "  <div id=\"df-ebaefe40-a34c-46e0-84b0-058ceb985158\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -345,7 +345,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d360bdee-48df-42bb-95cd-6e9f65ef0ae8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ebaefe40-a34c-46e0-84b0-058ceb985158')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -396,12 +396,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d360bdee-48df-42bb-95cd-6e9f65ef0ae8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ebaefe40-a34c-46e0-84b0-058ceb985158 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d360bdee-48df-42bb-95cd-6e9f65ef0ae8');\n",
+              "          const element = document.querySelector('#df-ebaefe40-a34c-46e0-84b0-058ceb985158');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -455,9 +455,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5yOrQPM2k-TR",
-        "outputId": "a1e5983d-c750-4259-9c4f-d26953efdfb6"
+        "outputId": "d74db8c3-ccb7-4f77-88f1-2b6189d3b859"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +482,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 4
         }
       ]
     },
@@ -511,18 +511,335 @@
       ],
       "metadata": {
         "id": "_9DyJwZrldW0",
-        "outputId": "8fd01d0a-5d37-4604-c724-fe2972d5bc21",
+        "outputId": "1f104936-5669-4d9e-cddf-737e4381bc3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "27.912\n"
+            "28.15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's now make the similar calculations for the logically more accurate data:"
+      ],
+      "metadata": {
+        "id": "rIiTeWCvfWOP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "more_logical_data_file_path = 'people_3000_records_more_logical_data.csv'\n",
+        "logical_data = pd.read_csv(more_logical_data_file_path)\n",
+        "\n",
+        "# dropna drops missing values (think of na as \"not available\")\n",
+        "logical_data = logical_data.dropna(axis=0)\n",
+        "\n",
+        "logical_data.columns"
+      ],
+      "metadata": {
+        "id": "kVSn2FldfSIl",
+        "outputId": "7d634004-5da7-4d51-94a3-86b3af4a2886",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['id', 'name', 'age', 'height', 'weight'], dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logical_y = logical_data.weight\n",
+        "features = ['age', 'height']\n",
+        "logical_X = logical_data[features]\n",
+        "logical_X.describe()"
+      ],
+      "metadata": {
+        "id": "e0u1YIQqf0GW",
+        "outputId": "38ff3766-a0be-48de-9e2f-5e1133de5829",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 300
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "               age       height\n",
+              "count  3000.000000  3000.000000\n",
+              "mean     25.593667   159.376333\n",
+              "std      11.702259    33.781017\n",
+              "min       2.000000    51.000000\n",
+              "25%      15.750000   153.000000\n",
+              "50%      30.500000   167.000000\n",
+              "75%      35.000000   181.000000\n",
+              "max      40.000000   200.000000"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-50f1a57d-8b74-4475-a672-0371a039ceae\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>age</th>\n",
+              "      <th>height</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>3000.000000</td>\n",
+              "      <td>3000.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>25.593667</td>\n",
+              "      <td>159.376333</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>11.702259</td>\n",
+              "      <td>33.781017</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>51.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>15.750000</td>\n",
+              "      <td>153.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>30.500000</td>\n",
+              "      <td>167.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>35.000000</td>\n",
+              "      <td>181.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>40.000000</td>\n",
+              "      <td>200.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50f1a57d-8b74-4475-a672-0371a039ceae')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-50f1a57d-8b74-4475-a672-0371a039ceae button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-50f1a57d-8b74-4475-a672-0371a039ceae');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define model. Specify a number for random_state to ensure same results each run\n",
+        "logical_model = DecisionTreeRegressor(random_state=1)\n",
+        "\n",
+        "# Fit model\n",
+        "logical_model.fit(logical_X, logical_y)\n",
+        "\n",
+        "print(\"Making predictions for the following 5 people:\")\n",
+        "print(logical_X.head())\n",
+        "print(\"The predictions are\")\n",
+        "print(logical_model.predict(logical_X.head()))\n",
+        "\n",
+        "predicted_weight = logical_model.predict(logical_X)\n",
+        "# The following mean error will be very very small since the model and the validation data is the same:\n",
+        "mean_absolute_error(logical_y, predicted_weight)"
+      ],
+      "metadata": {
+        "id": "C7V2ficrgBxE",
+        "outputId": "8bd61163-e4f4-4869-8bbb-bed6af1bd902",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Making predictions for the following 5 people:\n",
+            "   age  height\n",
+            "0    2    51.0\n",
+            "1    8   118.0\n",
+            "2    9    73.0\n",
+            "3    3   110.0\n",
+            "4    5   133.0\n",
+            "The predictions are\n",
+            "[38.  26.  32.  28.  19.5]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.657599591149592"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Now, we'll again split the data into two parts:\n",
+        "\n",
+        "train_X_logical, val_X_logical, train_y_logical, val_y_logical = train_test_split(logical_X, logical_y, random_state = 0)\n",
+        "\n",
+        "# Define the model:\n",
+        "better_logical_model = DecisionTreeRegressor()\n",
+        "\n",
+        "# Fit the model:\n",
+        "better_logical_model.fit(train_X_logical, train_y_logical)\n",
+        "\n",
+        "# get predicted prices on validation data:\n",
+        "val_predict = better_logical_model.predict(val_X_logical)\n",
+        "\n",
+        "# This time error should be smaller because the data is more relaible:\n",
+        "print(mean_absolute_error(val_y_logical, val_predict))"
+      ],
+      "metadata": {
+        "id": "WvpUzdAugLhK",
+        "outputId": "41ec2ce8-6e2b-47f6-c868-6c8b8f819230",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10.233969841269841\n"
           ]
         }
       ]
